Fixes: #9 - personpicker_page dialog box is too tall

--- a/src/widgets/personpicker_page/less/personpicker_page.less
+++ b/src/widgets/personpicker_page/less/personpicker_page.less
@@ -1,3 +1,12 @@
-.personpicker {
-    margin: 0 15px;
+.ui-personpicker-page-container {
+    .ui-content {
+        padding: 0;
+    }
+    .ui-header {
+        margin: 15px auto;
+        padding: 0;
+    }
+    .personpicker {
+        margin: 0;
+    }
 }
